--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Calculator</title>
+    <title>Calculator</title>
     <style>
         body {
             display: flex;
@@ -12,8 +12,125 @@
             height: 100vh;
             margin: 0;
             background-color: #f0f0f0;
-            font-family: 'Arial', sans-serif;
+            font-family: Arial, sans-serif;
         }
         .calculator {
-            border: 2px solid #ccc;
-            border-radius: 1
+            border: 1px solid #ccc;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            overflow: hidden;
+            width: 320px;
+        }
+        #display {
+            width: 100%;
+            height: 80px;
+            border: none;
+            background-color: #222;
+            color: #fff;
+            text-align: right;
+            padding: 20px;
+            font-size: 2.5em;
+            box-sizing: border-box;
+        }
+        .buttons {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+        }
+        button {
+            height: 80px;
+            border: 1px solid #ccc;
+            font-size: 1.8em;
+            cursor: pointer;
+            background-color: #fafafa;
+            transition: background-color 0.2s;
+        }
+        button:hover {
+            background-color: #e0e0e0;
+        }
+        button:active {
+            background-color: #d0d0d0;
+        }
+        .operator {
+            background-color: #f9a825;
+            color: white;
+        }
+        .operator:hover {
+            background-color: #fbc02d;
+        }
+        .operator:active {
+            background-color: #f57f17;
+        }
+        #clear {
+            background-color: #e53935;
+            color: white;
+        }
+        #clear:hover {
+            background-color: #f44336;
+        }
+        #clear:active {
+            background-color: #c62828;
+        }
+        #equals {
+            background-color: #43a047;
+            color: white;
+            grid-column: span 2;
+        }
+        #equals:hover {
+            background-color: #4caf50;
+        }
+        #equals:active {
+            background-color: #388e3c;
+        }
+        #zero {
+            grid-column: span 2;
+        }
+    </style>
+</head>
+<body>
+
+    <div class="calculator">
+        <input type="text" id="display" readonly>
+        <div class="buttons">
+            <button id="clear" onclick="clearDisplay()">C</button>
+            <button class="operator" onclick="appendToDisplay('/')">/</button>
+            <button class="operator" onclick="appendToDisplay('*')">*</button>
+            
+            <button onclick="appendToDisplay('7')">7</button>
+            <button onclick="appendToDisplay('8')">8</button>
+            <button onclick="appendToDisplay('9')">9</button>
+            <button class="operator" onclick="appendToDisplay('-')">-</button>
+
+            <button onclick="appendToDisplay('4')">4</button>
+            <button onclick="appendToDisplay('5')">5</button>
+            <button onclick="appendToDisplay('6')">6</button>
+            <button class="operator" onclick="appendToDisplay('+')">+</button>
+
+            <button onclick="appendToDisplay('1')">1</button>
+            <button onclick="appendToDisplay('2')">2</button>
+            <button onclick="appendToDisplay('3')">3</button>
+            <button id="equals" rowspan="2" onclick="calculateResult()">=</button>
+
+            <button id="zero" onclick="appendToDisplay('0')">0</button>
+        </div>
+    </div>
+
+    <script>
+        const display = document.getElementById('display');
+
+        function appendToDisplay(input) {
+            display.value += input;
+        }
+
+        function clearDisplay() {
+            display.value = '';
+        }
+
+        function calculateResult() {
+            try {
+                // Use Function constructor for a slightly safer evaluation than eval()
+                const result = new Function('return ' + display.value)();
+                if (isFinite(result)) {
+                    display.value = result;
+                } else {
+                    display.value = 'Error';
+                }
